Fix height over header overflow element

--- a/pages/scss/common.scss
+++ b/pages/scss/common.scss
@@ -721,8 +721,8 @@ form {
 
         .logo,
         .title,
-        .filler {
-            height: min(100%, var(--titlebar-height));
+        .filler,
+        .overflow {
             height: var(--titlebar-height);
         }
 
